--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
                                     <li>
                                         <p>Country : <span> Netherlands</span></p>
                                     </li>
+                                    <li>
+                                        <p>Contact me : <span> IM on Linked <a href="https://www.linkedin.com/in/jop-gommans"><i class="fa fa-linkedin"></i></a></span>
+					</p>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="col-6 personal-info">
@@ -132,7 +136,7 @@
                                         <p>Website : <span> https://itworksonline.nl</span></p>
                                     </li>
                                     <li>
-                                        <p>Hourly Rate : <span> €115 - €135</span></p>
+                                        <p>Hourly Rate : <span> In consultation</span></p>
                                     </li>
                                 </ul>
                             </div>
@@ -567,6 +571,8 @@
     <script src="assets/js/particles-01.min.js"></script>
     <!--  particles app Js  -->
     <script src="assets/js/particles-01.app.js"></script>
+    <!-- Map Js -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRemITiP7JRWpZwLhVt-T2x5MeUFE2KWs"></script>
     <!--  Custom JS  -->
     <script src="assets/js/arshia.js"></script>
 
