--- a/index.html
+++ b/index.html
@@ -548,7 +548,23 @@
         </div>
     </section>
     <!--     Resume End    -->
-
+	
+<footer id="credits" class="footer py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 text-center text-md-left mb-3 mb-md-0">
+                <p class="credits-text">
+                    Design by 
+                    <a href="https://thalpius.com/" target="_blank" class="thalpius">Thalpius</a>
+                </p>
+            </div>
+            <div class="col-md-4 text-center mb-3 mb-md-0">
+                <p class="mb-0">&copy; 2025 IT Works Online. All Rights Reserved.</p>
+            </div>
+        </div>
+    </div>
+</footer>
+	
     <!--   Return To Top  -->
     <a class="return-to-top text-white bg-base-color d-inline-block" href="javascript:void(0)"><i
             class="lni-arrow-up"></i></a>
