--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#resume">Resume</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#network">My Network</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -548,6 +551,37 @@
         </div>
     </section>
     <!--     Resume End    -->
+
+    <!--   Network Start   -->
+    <section id="network" class="section network pb-5 pt-6">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-12 mt-4 mt-lg-0">
+                    <div class="personal-item ">
+                        <h2 class="mb-0 base-color-white">My <span class="base-color">Network</span></h2>
+	                <div class="image-border">
+        	            <p>Looking for more people like me?<br> The list of people below is a list of people I personally vouch for. They are hard-working, fun people that really know their stuff. Get in contact with them (as well) if you're looking for some real IT-consultancy acces!</p>
+			</div>
+                        <div class="row">
+                            <div class="col-12 personal-info">
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <p>Raymond Roethof <a href="https://www.linkedin.com/in/thalpius/"><i class="fa fa-globe"></i></a> : <span> (Microsoft) Security-specialist and MVP, with an extensive Identity background</span></p>
+                                    </li>
+                                    <li>
+                                        <p>Tristan van Onselen <a href="https://www.linkedin.com/in/tristanvanonselen/"><i class="fa fa-globe"></i></a> : <span> (Microsoft) Security-specialist with a deep and broad Defender- and Sentinel background</span></p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    Network End    -->
 	
 <footer id="credits" class="footer py-3">
     <div class="container">
@@ -587,8 +621,6 @@
     <script src="assets/js/particles-01.min.js"></script>
     <!--  particles app Js  -->
     <script src="assets/js/particles-01.app.js"></script>
-    <!-- Map Js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRemITiP7JRWpZwLhVt-T2x5MeUFE2KWs"></script>
     <!--  Custom JS  -->
     <script src="assets/js/arshia.js"></script>
 
