--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                     <div class="personal-item ">
                         <h2 class="mb-0 base-color-white">My <span class="base-color">Network</span></h2>
 	                <div class="image-border">
-        	            <p>Looking for more people like me?<br> The list of people below is a list of people I personally vouch for. They are hard-working, fun people that really know their stuff. Get in contact with them (as well) if you're looking for some real IT-consultancy acces!</p>
+        	            <p>Looking for more people like me?<br> The list of people below is a list of people I personally vouch for. They are hard-working, fun people that really know their stuff. Get in contact with them (as well) if you're looking for some real IT-consultancy aces!</p>
 			</div>
                         <div class="row">
                             <div class="col-12 personal-info">
