--- a/index.html
+++ b/index.html
@@ -572,6 +572,9 @@
                                     <li>
                                         <p>Tristan van Onselen <a href="https://www.linkedin.com/in/tristanvanonselen/"><i class="fa fa-globe"></i></a> : <span> (Microsoft) Security-specialist with a deep and broad Defender- and Sentinel background</span></p>
                                     </li>
+				    <li>
+					    <p>Remy Kruijer <a href="https://www.linkedin.com/in/remy-kruijer-74526738/"><i class="fa fa-globe"></i></a> : <span> (Microsoft) Security- and riskspecialist</span></p>
+				    </li>
                                 </ul>
                             </div>
                         </div>
